<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/WelcomeScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/ColorBgBody"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="12pt"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/CourseCode"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/ColorBg"
            android:textSize="18pt"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/CourseTitle"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/ColorBg"
            android:textSize="14pt"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Semester"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="#aaaaaa"
            android:textSize="16pt"
            />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:id="@+id/goToMenu"
        android:layout_height="wrap_content"
        android:text="@string/clickprompt"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#aaaaaa"
        android:textSize="16pt"
        />
</LinearLayout>